--- a/views/about.html
+++ b/views/about.html
@@ -5,9 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About || Emilia Cole</title>
+    <script src="https://kit.fontawesome.com/4b2619c1ae.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>About || Emilia Cole</h1>
+    <header>
+        <nav>
+            <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/music">music</a></li>
+            <li><a href="/contact">contact</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-spotify"></i></a>
+            <a href=""><i class="fab fa-apple"></i></a>
+            <a href=""><i class="fab fa-amazon"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+        </nav>
+            </header>
+            <main>
+                <h1>about<br>emilia //</h1>
+<img src="/img/emilia-about.jpg" alt="">
+<section>
+    <article>
+<h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, odit! Consequatur omnis, libero vitae reiciendis labore adipisci. Assumenda eos hic similique aut perferendis repellat minus? Voluptate illo quod architecto voluptatibus.
+<ul>
+    <li>John trickle,music today post</li>
+</ul>   
+</article>
+<article>
+    <h4>    Omnis quo nisi maxime aperiam iusto quasNulla ipsum fuga necessitatibus placeat </h4>
+    <ul>
+        <li>John trickle,music today post</li>
+    </ul>   
+    </article>
+</section>
+
+
+ </main>
 
 </body>
 </html>
