--- a/views/contact.html
+++ b/views/contact.html
@@ -5,9 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact || Emilia Cole</title>
+    <script src="https://kit.fontawesome.com/4b2619c1ae.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Contact || Emilia Cole</h1>
+    <header>
+        <nav>
+            <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/music">music</a></li>
+            <li><a href="/contact">contact</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-spotify"></i></a>
+            <a href=""><i class="fab fa-apple"></i></a>
+            <a href=""><i class="fab fa-amazon"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+        </nav>
+            </header>
+            <main>
+                <h1>contact //</h1>
+                <section><h3>we are here</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62432.292434915864!2d114.88470927706595!3d60.725322239961976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5c65ef033626228b%3A0x42e4e85ea7681f94!2sLensk%2C%20Rep%C3%BAblica%20de%20Saj%C3%A1%2C%20Rusia%2C%20678142!5e0!3m2!1ses!2sar!4v1647141237276!5m2!1ses!2sar" width=100% height=450px style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </section>
+                <section><h3>contact info</h3>
+                <article>
+                    <h4>MANAGAMENT | Karen Blanche</h4>
+                    <p>
+                    <b>email:</b><a href="mailto:info@mysite.com"> info@mysite.com</a></p> 
+                    <p><b>phone:</b><a href="tel:+123-456-7890">1223-456-7890</a> </p>
+                </article>
+                <article>
+                    <h4>BOOKING | Daniel ku</h4>
+                    <p>
+                    <b>email:</b><a href="mailto:info@mysite.com"> info@mysite.com</a></p> 
+                    <p><b>phone:</b><a href="tel:+123-456-7890">1223-456-7890</a> </p>
+                </article>
+                <article>
+                    <h4>LABEL | Wix records,Jake Coldham</h4>
+                    <p>
+                    <b>email:</b><a href="mailto:info@mysite.com"> info@mysite.com</a></p> 
+                    <p><b>phone:</b><a href="tel:+123-456-7890">1223-456-7890</a> </p>
+                </article>
+                <article>
+                    <h4>PR| That Girl Pr | Sara Brookstone</h4>
+                    <p>
+                    <b>email:</b><a href="mailto:info@mysite.com"> info@mysite.com</a></p> 
+                    <p><b>phone:</b><a href="tel:+123-456-7890">1223-456-7890</a> </p>
+                </article>
+            </section>
+            </main>
     
 </body>
 </html>
