--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home || Emilia Cole</title>
     <script src="https://kit.fontawesome.com/4b2619c1ae.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body>
+<body class="home">
     <header>
 <nav>
     <ul>
@@ -28,7 +29,7 @@
 </nav>
     </header>
     <main>
-        <img src="/img/emilia-home.jpg" alt="">
+      <!--   <img src="/img/emilia-home.jpg" alt=""> -->
         <h2>emilia <br> cole//</h2>
         <h1>twist in my reality</h1>
        </main>
