--- a/views/music.html
+++ b/views/music.html
@@ -5,8 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>music || Emilia Cole</title>
+
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/4b2619c1ae.js" crossorigin="anonymous"></script>
 </head>
-<body><h1>Music || Emilia Cole</h1>
-    
+<body class="music">
+    <header>
+        <nav>
+            <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/music">music</a></li>
+            <li><a href="/contact">contact</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-spotify"></i></a>
+            <a href=""><i class="fab fa-apple"></i></a>
+            <a href=""><i class="fab fa-amazon"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+        </nav>
+            </header>
+            <main><h1>music //</h1>
+            <H5>direct links</H5>
+            <UL>
+            <li><a href="#album"></a>album</li>
+            <li><a href="#organic"></a>Video:organic love</li>
+            <li><a href="#street"></a>Video:Street light</li>
+            </UL>
+            <section>
+                <h2 id="album">album <br>TWIST IN MY REALITY</h2>
+                <img src="/img/emilia-play-list.png" alt="imagen play list">
+                <ol>
+                   <li><i class="fas fa-play"><a href=""></a></i></li>
+                   <li><i class="fas fa-play"><a href=""></a></i></li>
+                   <li><i class="fas fa-play"><a href=""></a></i></li>
+                   <li><i class="fas fa-play"><a href=""></a></i></li>
+                </ol>
+                <article></article>
+            </section>
+        </main>
+
+
+
 </body>
 </html>
